<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/seed_site">

        <Preference
            android:defaultValue="false"
            android:key="pref_seed_site"
            android:summary="@string/site_site_desc_2"
            android:title="@string/seed_site" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_app_protection__screen_security">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_android_screen_lock"
            android:summary="@string/preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint"
            android:title="@string/preferences_app_protection__screen_lock" />

        <!-- TODO: check figure out what is needed for this -->
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_screen_security"
            android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots"
            android:title="@string/preferences__screen_security" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences__read_receipts">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_read_receipts"
            android:summary="@string/preferences__read_receipts_summary"
            android:title="@string/preferences__read_receipts" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences__typing_indicators">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_typing_indicators"
            android:summary="@string/preferences__typing_indicators_summary"
            android:title="@string/preferences__typing_indicators" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences__link_previews">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_link_previews"
            android:summary="@string/preferences__link_previews_summary"
            android:title="@string/preferences__send_link_previews" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences__calls_beta">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_call_notifications_enabled"
            android:summary="@string/preferences__allow_access_voice_video"
            android:title="@string/preferences__voice_video_calls" />
    </PreferenceCategory>

    <!-- <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_communication__category_sealed_sender">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_show_unidentifed_delivery_indicators"
            android:title="@string/preferences_communication__sealed_sender_display_indicators"
            android:summary="@string/preferences_communication__sealed_sender_display_indicators_description"/>

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_universal_unidentified_access"
            android:title="@string/preferences_communication__sealed_sender_allow_from_anyone"
            android:summary="@string/preferences_communication__sealed_sender_allow_from_anyone_description"/>

        <Preference
            android:key="pref_unidentified_learn_more"
            android:layout="@layout/unidentified_delivery_learn_more" />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_app_protection__registration_lock">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_registration_lock"
            android:title="@string/preferences_app_protection__registration_lock_pin"
            android:summary="@string/preferences_app_protection__enable_a_registration_lock_pin_that_will_be_required"/>

    </PreferenceCategory> -->

    <PreferenceCategory android:title="@string/preferences__incognito_keyboard">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_incognito_keyboard"
            android:summary="@string/preferences__request_keyboard_to_disable_personalized_learning"
            android:title="@string/preferences__incognito_keyboard" />
    </PreferenceCategory>

</PreferenceScreen>
