<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/medium_spacing">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seed_site"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/medium_font_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:alpha="0.6"
        android:text="@string/dialog_seed_site_desc"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/medium_font_size" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:background="@drawable/session_id_text_view_background"
        android:fontFamily="@font/space_mono_regular"
        android:hint="@string/please_enter_content"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp"
        android:textAlignment="textStart"
        android:textColor="?android:textColorPrimary"
        android:textColorHint="?searchHintColor"
        android:textSize="@dimen/small_font_size"
        tools:text="https://www.google.com" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tvCancel"
            style="@style/Widget.Session.Button.Dialog.UnimportantText"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_button_height"
            android:layout_marginStart="@dimen/medium_spacing"
            android:layout_weight="1"
            android:contentDescription="@string/AccessibilityId_cancel_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/tvOk"
            style="@style/Widget.Session.Button.Dialog.UnimportantText"
            android:layout_width="0dp"
            android:layout_height="@dimen/small_button_height"
            android:layout_weight="1"
            android:contentDescription="@string/AccessibilityId_copy_recovery_phrase"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>