<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/very_large_spacing"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_more" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:text="@string/fragment_recovery_phrase_title"
        android:textColor="?attr/reverseMainColor"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:text="@string/activity_restore_explanation"
        android:textColor="?reverseMainColor"
        android:textSize="@dimen/small_font_size" />

    <EditText
        android:id="@+id/mnemonicEditText"
        style="@style/SmallSessionEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="@dimen/very_large_spacing"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_bottom_left"
        android:contentDescription="@string/AccessibilityId_enter_your_recovery_phrase"
        android:gravity="center_vertical"
        android:hint="@string/activity_restore_seed_edit_text_hint"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:textColorHint="?attr/reverseMainColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button_height"
        android:layout_marginHorizontal="@dimen/very_large_spacing"
        android:layout_marginBottom="@dimen/very_large_spacing"
        android:background="@drawable/shape_bottom_right"
        android:gravity="center"
        android:text="@string/continue_2"
        android:textColor="@color/core_white"
        android:textSize="14sp" />

</LinearLayout>