<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/chatsToolbarColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:id="@+id/session_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/AccessibilityId_settings"
                android:textColor="?reverseMainColor"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/shape_bg_top_20"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/report"
                android:textColor="?reverseMainColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etContent"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_edittext_6"
                android:gravity="start|top"
                android:hint="@string/tip_enter_report_content"
                android:inputType="text"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingEnd="20dp"
                android:paddingBottom="16dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?thirdTextColor"
                android:textSize="@dimen/small_font_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvOk"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_ok"
                android:text="@string/ok" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>