<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/very_large_spacing"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_more" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:text="@string/activity_register_title"
        android:textColor="?attr/reverseMainColor"
        android:textSize="@dimen/large_font_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:text="@string/activity_register_explanation"
        android:textColor="?attr/reverseMainColor"
        android:textSize="@dimen/small_font_size" />

    <TextView
        android:id="@+id/publicKeyTextView"
        style="@style/SessionIDTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_spacing"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/very_large_spacing"
        android:background="@drawable/shape_bottom_left"
        android:contentDescription="@string/AccessibilityId_session_id"
        android:textColor="?attr/reverseMainColor"
        android:textSize="18sp"
        tools:text="05987d601943c267879be41830888066c6a024cbdc9a548d06813924bf3372ea78" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clOpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_top_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/copyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/shape_bottom_left"
            android:paddingStart="26dp"
            android:paddingTop="16dp"
            android:paddingEnd="26dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/registerButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent ">

            <TextView
                android:id="@+id/tvRecovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/copy"
                android:textColor="?reverseMainColor"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_bottom_right"
            android:paddingStart="26dp"
            android:paddingTop="16dp"
            android:paddingEnd="26dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/copyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/copyButton"
            app:layout_constraintTop_toTopOf="@id/copyButton">

            <TextView
                android:id="@+id/tvCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/continue_2"
                android:textColor="?reverseMainColor"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>